--- a/WSUI.OutlookPlugin/WSUI.OutlookPlugin.csproj
+++ b/WSUI.OutlookPlugin/WSUI.OutlookPlugin.csproj
@@ -91,9 +91,13 @@
     <Content Include="Loader\adxloader64.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="WSUIAddinModule.cs" />
+    <Compile Include="WSUIAddinModule.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="WSUIForm.cs" />
+    <Compile Include="WSUIForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="WSUIForm.Designer.cs">
       <DependentUpon>WSUIForm.cs</DependentUpon>
     </Compile>
