updated: - automatic silent update;

--- a/WSPreview/log4net.config
+++ b/WSPreview/log4net.config
@@ -8,7 +8,7 @@
   <log4net debug="true">
     <appender name="RollingLogFileAppender" type="log4net.Appender.RollingFileAppender">
       <lockingModel type="log4net.Appender.FileAppender+MinimalLock"/>
-      <file value="Logs\" />
+      <file value="${APPDATA}\WSUI\Log\" />
       <datePattern value="yyyy-MM-dd'.log'" />
       <staticLogFileName value="false" />
       <appendToFile value="true" />
