--- a/WSUI.OutlookPlugin/WSUI.OutlookPlugin.csproj
+++ b/WSUI.OutlookPlugin/WSUI.OutlookPlugin.csproj
@@ -78,6 +78,7 @@
       <HintPath>Interops\Microsoft.Office.Interop.Outlook.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.Xml.Linq" />
     <Reference Include="UIAutomationProvider" />
     <Reference Include="WindowsBase" />
     <Reference Include="WindowsFormsIntegration" />
@@ -91,13 +92,9 @@
     <Content Include="Loader\adxloader64.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="WSUIAddinModule.cs">
-      <SubType>Component</SubType>
-    </Compile>
+    <Compile Include="WSUIAddinModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="WSUIForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="WSUIForm.cs" />
     <Compile Include="WSUIForm.Designer.cs">
       <DependentUpon>WSUIForm.cs</DependentUpon>
     </Compile>
