--- a/WSUI.OutlookPlugin/WSUI.OutlookPlugin.csproj
+++ b/WSUI.OutlookPlugin/WSUI.OutlookPlugin.csproj
@@ -92,6 +92,9 @@
     <Content Include="Loader\adxloader64.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\Version.cs">
+      <Link>Properties\Version.cs</Link>
+    </Compile>
     <Compile Include="WSUIAddinModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WSUIForm.cs" />
