--- a/WSGen/Properties/Settings.settings
+++ b/WSGen/Properties/Settings.settings
@@ -11,5 +11,20 @@
     <Setting Name="BuildNumber" Type="System.String" Scope="Application">
       <Value Profile="(Default)">1.0.0</Value>
     </Setting>
+    <Setting Name="VersionFilename" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">Version.cs</Value>
+    </Setting>
+    <Setting Name="ProductVersion" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">"ProductVersion" = "8:[1-9]{1}\.[0-9]{1}\.[0-9]{1}"</Value>
+    </Setting>
+    <Setting Name="ProductCode" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">"ProductCode" = "8:\{[0-9a-fA-F]{8}\-[0-9a-fA-F]{4}\-[0-9a-fA-F]{4}\-[0-9a-fA-F]{4}\-[0-9a-fA-F]{12}\}"</Value>
+    </Setting>
+    <Setting Name="ProductVersionTemplate" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">"ProductVersion" = "8:{0}"</Value>
+    </Setting>
+    <Setting Name="ProductCodeTemplate" Type="System.String" Scope="User">
+      <Value Profile="(Default)">"ProductCode" = "8:{0}"</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
