--- a/WSGen/app.config
+++ b/WSGen/app.config
@@ -4,6 +4,9 @@
         <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
             <section name="WSGen.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         </sectionGroup>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="WSGen.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
     </configSections>
     <applicationSettings>
         <WSGen.Properties.Settings>
@@ -16,6 +19,25 @@
             <setting name="BuildNumber" serializeAs="String">
                 <value>1.0.0</value>
             </setting>
+            <setting name="VersionFilename" serializeAs="String">
+                <value>Version.cs</value>
+            </setting>
+            <setting name="ProductVersion" serializeAs="String">
+                <value>"ProductVersion" = "8:[1-9]{1}\.[0-9]{1}\.[0-9]{1}"</value>
+            </setting>
+            <setting name="ProductCode" serializeAs="String">
+                <value>"ProductCode" = "8:\{[0-9a-fA-F]{8}\-[0-9a-fA-F]{4}\-[0-9a-fA-F]{4}\-[0-9a-fA-F]{4}\-[0-9a-fA-F]{12}\}"</value>
+            </setting>
+            <setting name="ProductVersionTemplate" serializeAs="String">
+                <value>"ProductVersion" = "8:{0}"</value>
+            </setting>
         </WSGen.Properties.Settings>
     </applicationSettings>
+    <userSettings>
+        <WSGen.Properties.Settings>
+            <setting name="ProductCodeTemplate" serializeAs="String">
+                <value>"ProductCode" = "8:{0}"</value>
+            </setting>
+        </WSGen.Properties.Settings>
+    </userSettings>
 </configuration>
