updated: - added additional settings for adxpublisher;

--- a/Toolkits/wsadxpublisher.exe.config
+++ b/Toolkits/wsadxpublisher.exe.config
@@ -8,19 +8,19 @@
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup><applicationSettings>
         <WSADXPublisher.Properties.Settings>
             <setting name="installerFile" serializeAs="String">
-                <value>C:\Users\Vincent\Documents\GitHub\WSUI_Project\ROutput\WSUI.OutlookPluginSetup.msi</value>
+                <value>h:\Visual\WORK\WSUI\solution\Routput\WSUI.OutlookPluginSetup.msi</value>
             </setting>
             <setting name="publishingLocation" serializeAs="String">
-                <value>C:\Users\Vincent\Documents\GitHub\WSUI_Project\ClickTwice</value>
+                <value>h:\Visual\WORK\WSUI\solution\ClickTwice</value>
             </setting>
             <setting name="installationUrl" serializeAs="String">
                 <value>http://fruitfactory.github.io/WSSQL_GUI/downloads/clicktwice/</value>
             </setting>
             <setting name="certificateFile" serializeAs="String">
-                <value>C:\Users\Vincent\Documents\GitHub\WSUI_Project\WSUI.OutlookPlugin\wsuiclicktwice.pfx</value>
+                <value>h:\Visual\WORK\WSUI\solution\WSUI.OutlookPlugin\wsuiclicktwice.pfx</value>
             </setting>
             <setting name="iconFileName" serializeAs="String">
-                <value>C:\Users\Vincent\Documents\GitHub\WSUI_Project\WSUI\Search.ico</value>
+                <value>h:\Visual\WORK\WSUI\solution\WSUI\Search.ico</value>
             </setting>
             <setting name="quietModeDuringInstall" serializeAs="String">
                 <value>False</value>
@@ -36,6 +36,15 @@
             </setting>
             <setting name="ADXPublisherConfigFilename" serializeAs="String">
                 <value>adxpublisher.exe.config</value>
+            </setting>
+            <setting name="downloaderFileName" serializeAs="String">
+                <value>wsui.outlookplugin.exe</value>
+            </setting>
+            <setting name="targetApplicationNames" serializeAs="String">
+                <value>Outlook</value>
+            </setting>
+            <setting name="targetFrameworkVersion" serializeAs="String">
+                <value>v4.0.30319</value>
             </setting>
         </WSADXPublisher.Properties.Settings>
     </applicationSettings>
