--- a/WSADXPublisher/app.config
+++ b/WSADXPublisher/app.config
@@ -37,6 +37,15 @@
             <setting name="ADXPublisherConfigFilename" serializeAs="String">
                 <value>adxpublisher.exe.config</value>
             </setting>
+            <setting name="downloaderFileName" serializeAs="String">
+                <value>wsui.outlookplugin.exe</value>
+            </setting>
+            <setting name="targetApplicationNames" serializeAs="String">
+                <value>Outlook</value>
+            </setting>
+            <setting name="targetFrameworkVersion" serializeAs="String">
+                <value>v4.0.30319</value>
+            </setting>
         </WSADXPublisher.Properties.Settings>
     </applicationSettings>
 </configuration>
