--- a/WSADXPublisher/Properties/Settings.settings
+++ b/WSADXPublisher/Properties/Settings.settings
@@ -32,5 +32,14 @@
     <Setting Name="ADXPublisherConfigFilename" Type="System.String" Scope="Application">
       <Value Profile="(Default)">adxpublisher.exe.config</Value>
     </Setting>
+    <Setting Name="downloaderFileName" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">wsui.outlookplugin.exe</Value>
+    </Setting>
+    <Setting Name="targetApplicationNames" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">Outlook</Value>
+    </Setting>
+    <Setting Name="targetFrameworkVersion" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">v4.0.30319</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
