--- a/WSPreview/WSPreview.csproj
+++ b/WSPreview/WSPreview.csproj
@@ -54,6 +54,10 @@
     <Reference Include="Microsoft.Ink, Version=1.7.2600.2180, Culture=neutral, PublicKeyToken=31bf3856ad364e35">
       <HintPath>..\Toolkits\Microsoft\Microsoft.Ink.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.mshtml, Version=7.0.3300.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+      <HintPath>..\Toolkits\Microsoft\Microsoft.mshtml.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Office.Interop.Excel, Version=12.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c">
       <EmbedInteropTypes>True</EmbedInteropTypes>
       <HintPath>..\Toolkits\Interop\Excel\Microsoft.Office.Interop.Excel.dll</HintPath>
@@ -168,6 +172,7 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="PreviewHandlerFramework\ISearchWordHighlight.cs" />
+    <Compile Include="PreviewHandlerFramework\ITranslateMessage.cs" />
     <Compile Include="PreviewHandlerFramework\PreviewHandler.cs" />
     <Compile Include="PreviewHandlerFramework\PreviewHandlerAttribute.cs" />
     <Compile Include="PreviewHandlerFramework\PreviewHandlerControl.cs">
