updated: - a lot of changes )

--- a/Toolkits/wsadxpublisher.exe.config
+++ b/Toolkits/wsadxpublisher.exe.config
@@ -8,19 +8,19 @@
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup><applicationSettings>
         <WSADXPublisher.Properties.Settings>
             <setting name="installerFile" serializeAs="String">
-                <value>h:\Visual\WORK\WSUI\solution\Routput\WSUI.OutlookPluginSetup.msi</value>
+                <value>C:\Users\Vincent\Documents\GitHub\WSUI\solution\ROutput\WSUI.OutlookPluginSetup.msi</value>
             </setting>
             <setting name="publishingLocation" serializeAs="String">
-                <value>h:\Visual\WORK\WSUI\solution\ClickTwice</value>
+                <value>C:\Users\Vincent\Documents\GitHub\WSUI\solution\Clicktwice</value>
             </setting>
             <setting name="installationUrl" serializeAs="String">
                 <value>http://fruitfactory.github.io/WSSQL_GUI/downloads/clicktwice/</value>
             </setting>
             <setting name="certificateFile" serializeAs="String">
-                <value>h:\Visual\WORK\WSUI\solution\WSUI.OutlookPlugin\wsuiclicktwice.pfx</value>
+                <value>C:\Users\Vincent\Documents\GitHub\WSUI\solution\WSUI.OutlookPlugin\wsuiclicktwice.pfx</value>
             </setting>
             <setting name="iconFileName" serializeAs="String">
-                <value>h:\Visual\WORK\WSUI\solution\WSUI\Search.ico</value>
+                <value>C:\Users\Vincent\Documents\GitHub\WSUI\solution\WSUI\Search.ico</value>
             </setting>
             <setting name="quietModeDuringInstall" serializeAs="String">
                 <value>False</value>
@@ -32,7 +32,7 @@
                 <value>False</value>
             </setting>
             <setting name="AddInExpressBinFolderPath" serializeAs="String">
-                <value>h:\Visual\WORK\Add-in Express for .NET\Bin\</value>
+                <value>C:\Program Files (x86)\Add-in Express\Add-in Express for .NET\Bin\</value>
             </setting>
             <setting name="ADXPublisherConfigFilename" serializeAs="String">
                 <value>adxpublisher.exe.config</value>
