--- a/WSADXPublisher/app.config
+++ b/WSADXPublisher/app.config
@@ -40,11 +40,14 @@
             <setting name="downloaderFileName" serializeAs="String">
                 <value>wsui.outlookplugin.exe</value>
             </setting>
-            <setting name="targetApplicationNames" serializeAs="String">
-                <value>Outlook</value>
-            </setting>
             <setting name="targetFrameworkVersion" serializeAs="String">
                 <value>v4.0.30319</value>
+            </setting>
+            <setting name="targetApplicationNames" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="showRunningApplicationsWarning" serializeAs="String">
+                <value>False</value>
             </setting>
         </WSADXPublisher.Properties.Settings>
     </applicationSettings>
