--- a/WSADXPublisher/Properties/Settings.settings
+++ b/WSADXPublisher/Properties/Settings.settings
@@ -3,19 +3,19 @@
   <Profiles />
   <Settings>
     <Setting Name="installerFile" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">C:\Users\Vincent\Documents\GitHub\WSUI_Project\ROutput\WSUI.OutlookPluginSetup.msi</Value>
+      <Value Profile="(Default)">C:\Users\Vincent\Documents\GitHub\WSUI\solution\ROutput\WSUI.OutlookPluginSetup.msi</Value>
     </Setting>
     <Setting Name="publishingLocation" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">C:\Users\Vincent\Documents\GitHub\WSUI_Project\ClickTwice</Value>
+      <Value Profile="(Default)">C:\Users\Vincent\Documents\GitHub\WSUI\solution\Clicktwice</Value>
     </Setting>
     <Setting Name="installationUrl" Type="System.String" Scope="Application">
       <Value Profile="(Default)">http://fruitfactory.github.io/WSSQL_GUI/downloads/clicktwice/</Value>
     </Setting>
     <Setting Name="certificateFile" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">C:\Users\Vincent\Documents\GitHub\WSUI_Project\WSUI.OutlookPlugin\wsuiclicktwice.pfx</Value>
+      <Value Profile="(Default)">C:\Users\Vincent\Documents\GitHub\WSUI\solution\WSUI.OutlookPlugin\wsuiclicktwice.pfx</Value>
     </Setting>
     <Setting Name="iconFileName" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">C:\Users\Vincent\Documents\GitHub\WSUI_Project\WSUI\Search.ico</Value>
+      <Value Profile="(Default)">C:\Users\Vincent\Documents\GitHub\WSUI\solution\WSUI\Search.ico</Value>
     </Setting>
     <Setting Name="quietModeDuringInstall" Type="System.Boolean" Scope="Application">
       <Value Profile="(Default)">False</Value>
@@ -27,7 +27,7 @@
       <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="AddInExpressBinFolderPath" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">h:\Visual\WORK\Add-in Express for .NET\Bin\</Value>
+      <Value Profile="(Default)">C:\Program Files (x86)\Add-in Express\Add-in Express for .NET\Bin\</Value>
     </Setting>
     <Setting Name="ADXPublisherConfigFilename" Type="System.String" Scope="Application">
       <Value Profile="(Default)">adxpublisher.exe.config</Value>
