--- a/WSGen/app.config
+++ b/WSGen/app.config
@@ -14,7 +14,7 @@
                 <value>wsui.number</value>
             </setting>
             <setting name="SetupProjectFile" serializeAs="String">
-                <value>\WSUI.OutlookPlugin\WSUI.OutlookPluginSetup\1.0.0\WSUI.OutlookPluginSetup(1.0.0).vdproj</value>
+                <value>\WSUI.OutlookPlugin\WSUI.OutlookPluginSetup\Product.wxs</value>
             </setting>
             <setting name="BuildNumber" serializeAs="String">
                 <value>1.0.0</value>
