--- a/WSUI/App.config
+++ b/WSUI/App.config
@@ -1,7 +1,33 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <configSections>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net" />
+  </configSections>
+  <startup> 
+      <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
+  </startup>
+  <log4net debug="true">
+    <appender name="RollingLogFileAppender" type="log4net.Appender.RollingFileAppender">
+      <lockingModel type="log4net.Appender.FileAppender+MinimalLock"/>
+      <file value="${APPDATA}\WSUI\Log\" />
+      <datePattern value="yyyy-MM-dd'.log'" />
+      <staticLogFileName value="false" />
+      <appendToFile value="true" />
+      <rollingStyle value="Date" />
+      <maxSizeRollBackups value="10" />
+      <maximumFileSize value="5MB" />
+      <layout type="log4net.Layout.PatternLayout">
+        <header value="[Start Application:  %date{MM/dd/yy HH:mm}]&#13;&#10;" type="log4net.Util.PatternString" />
+        <footer value="[Finish Application: %date{MM/dd/yy HH:mm}]&#13;&#10;" type="log4net.Util.PatternString" />
+        <conversionPattern value="%date [%thread] %-5level %logger [%property{NDC}] - %message%newline" />
+      </layout>
+    </appender>
+
+    <root>
+        <level value="ALL" />
+        <appender-ref ref="RollingLogFileAppender" />
+    </root>
+
+  </log4net>
   
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
-    </startup>
 </configuration>
