--- a/WSUI/WSUI.csproj
+++ b/WSUI/WSUI.csproj
@@ -62,6 +62,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
+    <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -199,7 +200,6 @@
   <PropertyGroup>
     <PostBuildEvent>xcopy $(SolutionDir)Toolkits\ZipLib\ICSharpCode.SharpZipLib.dll $(TargetDir) /F /R /Y /I
 xcopy $(SolutionDir)Toolkits\Microsoft\Microsoft.Ink.dll $(TargetDir) /F /R /Y /I
-xcopy $(SolutionDir)Toolkits\MVCSharp\MVCSharp.dll $(TargetDir) /F /R /Y /I
 xcopy $(SolutionDir)Toolkits\PDFSharp\PDFLibNet.dll $(TargetDir) /F /R /Y /I
 xcopy $(SolutionDir)Toolkits\Interop\Outlook\Microsoft.Office.Interop.Outlook.dll $(TargetDir) /F /R /Y /I
 xcopy $(SolutionDir)Toolkits\Interop\Excel\Microsoft.Office.Interop.Excel.dll $(TargetDir) /F /R /Y /I
@@ -208,8 +208,14 @@ xcopy $(SolutionDir)Toolkits\Scintilla\SciLexer64.dll $(TargetDir) /F /R /Y /I
 xcopy $(SolutionDir)Toolkits\Scintilla\ScintillaNET.dll $(TargetDir) /F /R /Y /I
 xcopy $(SolutionDir)Toolkits\Interop\Word\Microsoft.Office.Interop.Word.dll $(TargetDir) /F /R /Y /I
 xcopy $(SolutionDir)Toolkits\Interop\Office\Office.dll $(TargetDir) /F /R /Y /I
-xcopy $(SolutionDir)Toolkits\GflSdk\lib\libgfl340.dll $(TargetDir) /F /R /Y /I
-xcopy $(SolutionDir)Toolkits\GflSdk\lib\libgfle340.dll $(TargetDir) /F /R /Y /I</PostBuildEvent>
+
+xcopy $(SolutionDir)Toolkits\GflSdk\lib\GflWrapper.dll $(TargetDir)lib\ /F /R /Y /I
+xcopy $(SolutionDir)Toolkits\GflSdk\lib\libgfl340.dll $(TargetDir)lib\ /F /R /Y /I
+xcopy $(SolutionDir)Toolkits\GflSdk\lib\libgfle340.dll $(TargetDir)lib\ /F /R /Y /I
+
+xcopy $(SolutionDir)Toolkits\GflSdk\lib64\GflWrapper.dll $(TargetDir)lib64\ /F /R /Y /I
+xcopy $(SolutionDir)Toolkits\GflSdk\lib64\libgfl340.dll $(TargetDir)lib64\ /F /R /Y /I
+xcopy $(SolutionDir)Toolkits\GflSdk\lib64\libgfle340.dll $(TargetDir)lib64\ /F /R /Y /I</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
