--- a/WSPreview/WSPreview.csproj
+++ b/WSPreview/WSPreview.csproj
@@ -164,6 +164,12 @@
     <Compile Include="Controls\PDFViewer.designer.cs">
       <DependentUpon>PDFViewer.cs</DependentUpon>
     </Compile>
+    <Compile Include="Controls\RtfControl\RtfPreviewControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\RtfControl\RtfPreviewControl.Designer.cs">
+      <DependentUpon>RtfPreviewControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="Controls\SourceViewer.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -189,6 +195,7 @@
     <Compile Include="PreviewHandlerFramework\FileBasedPreviewHandlerControl.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="PreviewHandlerFramework\IPreviewControl.cs" />
     <Compile Include="PreviewHandlerFramework\ISearchWordHighlight.cs" />
     <Compile Include="PreviewHandlerFramework\ITranslateMessage.cs" />
     <Compile Include="PreviewHandlerFramework\PreviewHandler.cs" />
@@ -221,6 +228,7 @@
     <Compile Include="PreviewHandlers\PdfPreviewHandler.cs" />
     <Compile Include="PreviewHandlers\ResourcesPreviewHandler.cs" />
     <Compile Include="PreviewHandlers\ResxPreviewHandler.cs" />
+    <Compile Include="PreviewHandlers\RtfPreviewHandler.cs" />
     <Compile Include="PreviewHandlers\SnkPreviewHandler.cs" />
     <Compile Include="PreviewHandlers\SourcePreviewHandler.cs" />
     <Compile Include="PreviewHandlers\TxtPreviewHandler.cs" />
@@ -258,6 +266,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\PDFViewer.resx">
       <DependentUpon>PDFViewer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\RtfControl\RtfPreviewControl.resx">
+      <DependentUpon>RtfPreviewControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="PreviewHandlerHost\PreviewHandlerHostControl.resx">
       <DependentUpon>PreviewHandlerHostControl.cs</DependentUpon>
