updated: - added ElementHost for increasing loading speed;

--- a/GflWrapper/GflWrapper.vcxproj
+++ b/GflWrapper/GflWrapper.vcxproj
@@ -93,6 +93,7 @@
       <AdditionalDependencies>libgfl.lib;libgfle.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>$(SolutionDir)Toolkits\GflSdk\lib</AdditionalLibraryDirectories>
       <TargetMachine>MachineX86</TargetMachine>
+      <Profile>true</Profile>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -116,6 +117,7 @@
       <AdditionalDependencies>libgfl.lib;libgfle.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <ProgramDatabaseFile>$(TargetDir)$(TargetName).pdb</ProgramDatabaseFile>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <Profile>true</Profile>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
