--- a/WSPreview/WSPreview.csproj
+++ b/WSPreview/WSPreview.csproj
@@ -153,9 +153,6 @@
     <Compile Include="Controls\Office\WebUtils\ExtWebBrowserEventHelper.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Controls\PreviewBrowser.cs">
-      <SubType>Component</SubType>
-    </Compile>
     <Compile Include="Controls\Office\WordWindow.cs" />
     <Compile Include="Controls\PdfControl\PageViewer.cs">
       <SubType>UserControl</SubType>
@@ -178,6 +175,8 @@
     <Compile Include="Controls\SourceControl\SourceViewer.Designer.cs">
       <DependentUpon>SourceViewer.cs</DependentUpon>
     </Compile>
+    <Compile Include="PreviewHandlerFramework\ControlsKey.cs" />
+    <Compile Include="PreviewHandlerFramework\KeyControlAttribute.cs" />
     <Compile Include="Service\Preview\HelperPreviewHandlers.cs" />
     <Compile Include="PInvoke\WindowAPI.cs" />
     <Compile Include="PreviewHandlerFramework\COMInterop\COLORREF.cs" />
