updated: - added new preview control for Bin files; - now we will check updates after starting plugin; - view for Everything, People, Emails, Attachments will be created during loading plugin (it's just for plugin mode. In Application mode we will create it with lazy behavior);

--- a/WSPreview/WSPreview.csproj
+++ b/WSPreview/WSPreview.csproj
@@ -103,6 +103,9 @@
     <Compile Include="..\Version.cs">
       <Link>Properties\Version.cs</Link>
     </Compile>
+    <Compile Include="Controls\BinControl\BinPreviewControl.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Controls\Calendar\CalendarIcsPreview.cs">
       <SubType>UserControl</SubType>
     </Compile>
