--- a/WSUI.Infrastructure/WSUI.Infrastructure.csproj
+++ b/WSUI.Infrastructure/WSUI.Infrastructure.csproj
@@ -93,6 +93,7 @@
     <Compile Include="Models\SearchItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegionNames.cs" />
+    <Compile Include="Service\Dumper\MiniDumper.cs" />
     <Compile Include="Service\Enums\TypeSearchItem.cs" />
     <Compile Include="Service\EventArgs.cs" />
     <Compile Include="Service\ExtensionMethods.cs" />
