updated: - added project with custom actions; - added registry helper for update; - some changes in updating code;

--- a/WSUI.Core/WSUI.Core.csproj
+++ b/WSUI.Core/WSUI.Core.csproj
@@ -50,6 +50,7 @@
       <Link>Properties\Version.cs</Link>
     </Compile>
     <Compile Include="Enums\HostType.cs" />
+    <Compile Include="Helpers\RegistryHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
